[gd_scene load_steps=4 format=3 uid="uid://28moa08wp1eb"]

[ext_resource type="Script" uid="uid://yplag1cp2smb" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://d4jo5gumr57ww" path="res://assets/koti-poti/home page ui.png" id="2_bqqt6"]
[ext_resource type="AudioStream" uid="uid://jmy1opcnss1c" path="res://audio/StockTune-Trading Floor Chronicles_1769375372.mp3" id="2_ekxnf"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.97831494, 0.9090231, 0.72127265, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_bqqt6")

[node name="ExitBtn" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = -1
anchor_left = 0.49500003
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.40009
offset_top = 340.0
offset_right = 267.0
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Exit"

[node name="HowToPlayBtn" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = -1
anchor_left = 0.49500003
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.40009
offset_top = 147.0
offset_right = 267.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "How to Play"

[node name="PlayBtn" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -63.0
offset_right = 267.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "PLAY"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ekxnf")
volume_db = -25.0
autoplay = true

[connection signal="pressed" from="CanvasLayer/ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/HowToPlayBtn" to="." method="_on_how_to_play_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayBtn" to="." method="_on_play_btn_pressed"]
